css/blog.css
/*
Original design based on Andreas Viklund's Basic Reader v1.0 xhtml/css template 
For more information, see http://andreasviklund.com/templates/basic-reader/
*/

@import url("http://fonts.googleapis.com/css?family=Archivo+Narrow");

body {
	color: #303030;
	font-family: Archivo Narrow, sans-serif;
	line-height: 150%;
	font-size: 100%}
a {
	color:#972323;
	text-decoration: none;}
a:hover {text-decoration: underline;}

p,
ul,
ol,
dl {margin: 0px 0px 20px;}

h1 {
	color: #972323;
	font-size: 200%;
	line-height: 110%;}
h2 {
	font-size: 180%;
	color: #2380a0;
	margin-bottom: 15px;}
h3 {
	font-size: 120%;
	margin: 10px 0px 8px 20px;}
h1,
h2,
h3 {font-weight: 400;}

#content {
	text-align:left;
	font-family: Archivo Narrow, sans-serif;}
#subtitle {
	margin: 0px;
	line-height: 150%}

.sidebar {
	padding-left: 10px;}
.sidebar h1 { margin-top: 10px;}
.sidebar ul {
	list-style: none;
	margin-left: 20px;}
.sidebar li {
	font-size: 120%;
	line-height: 140%;}

#license {margin-top: 7px;}

#landinglist li {list-style: none;}

#landingsub {padding-left: 25px;}

/* sidebar undecorated links including title and links list item */
.ghostlinks a:hover {text-decoration: none;}

.blockquote {
	font-style: italic;
	padding-left: 15px;
	margin: 20px;}

.ratings {
	font-weight: bold;
	color: #2380a0;}

/*link table for formatting me page "where i am" listings */
.linktable {
    text-align: left;
    width: 60%;
    padding-left: 15px;}

#references {padding-left: 30px;}

